Rejigging things; starting again

--- a/tox.ini
+++ b/tox.ini
@@ -5,4 +5,4 @@ envlist = py36
 deps = pipenv
 commands =
     pipenv install --dev
-    pipenv run {envpython} pretty-matrix/print_test.py
+    pipenv run {envpython} -m unittest discover
